--- a/exer2_borromeo_b4l/app/src/main/res/layout/activity_main.xml
+++ b/exer2_borromeo_b4l/app/src/main/res/layout/activity_main.xml
@@ -4,18 +4,40 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".MainActivity"
+    android:orientation="vertical"
+    >
 
     <TextView
         android:id="@+id/header_text"
-        android:layout_width="0dp"
+        style="@style/textStyle"
+        android:layout_width="match_parent"
+        android:layout_height="349dp"
+        android:text="@string/header_text"
+        android:textSize="30sp" />
+
+    <ImageView
+        android:id="@+id/tv_logo"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:layout_gravity="center"
+        android:contentDescription="@string/tv_logo"
+        app:srcCompat="@drawable/tv_logo" />
+
+    <Button
+        android:id="@+id/start_button"
+        android:layout_width="115dp"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_margin="@dimen/layout_margin"
+        android:text="@string/start_text" />
+
+    <Button
+        android:id="@+id/retry_button"
+        android:layout_width="115dp"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/layout_margin"
-        android:layout_weight="1"
-        android:fontFamily="@font/chelsea_market"
-        android:padding="@dimen/small_padding"
-        android:text="@string/header_text"
-        android:textAlignment="center"
-        android:textSize="30sp" />
+        android:layout_gravity="center"
+        android:text="@string/retry_text" />
 
 </LinearLayout>
