--- a/exer2_borromeo_b4l/app/src/main/res/layout/activity_main.xml
+++ b/exer2_borromeo_b4l/app/src/main/res/layout/activity_main.xml
@@ -8,21 +8,28 @@
     android:orientation="vertical"
     >
 
-    <TextView
-        android:id="@+id/header_text"
-        style="@style/textStyle"
-        android:layout_width="match_parent"
-        android:layout_height="349dp"
-        android:text="@string/header_text"
-        android:textSize="30sp" />
-
     <ImageView
-        android:id="@+id/tv_logo"
-        android:layout_width="200dp"
-        android:layout_height="200dp"
+        android:id="@+id/shown_img"
+        android:layout_width="400dp"
+        android:layout_height="400dp"
         android:layout_gravity="center"
         android:contentDescription="@string/tv_logo"
         app:srcCompat="@drawable/tv_logo" />
+
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="150dp">
+
+        <TextView
+            android:id="@+id/shown_txt"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="TextView"
+            android:textSize="40sp"
+            tools:text="@string/header_text" />
+
+    </ScrollView>
 
     <Button
         android:id="@+id/start_button"
@@ -30,7 +37,8 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_margin="@dimen/layout_margin"
-        android:text="@string/start_text" />
+        android:text="@string/start_text"
+        android:onClick="changeDisplay"/>
 
     <Button
         android:id="@+id/retry_button"
