--- a/exer2_borromeo_b4l/app/src/main/res/layout/activity_main.xml
+++ b/exer2_borromeo_b4l/app/src/main/res/layout/activity_main.xml
@@ -46,6 +46,7 @@
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/layout_margin"
         android:layout_gravity="center"
-        android:text="@string/retry_text" />
+        android:text="@string/retry_text"
+        android:onClick="resetDisplay"/>
 
 </LinearLayout>
